--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
+    "nestjs-zod": "^3.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
