--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,16 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
+    "jwt-simple": "^0.5.6",
     "nestjs-zod": "^3.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "zod": "^3.22.4"
