--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@nestjs/common": "^10.2.8",
     "@nestjs/platform-express": "^10.2.8",
     "axios": "^1.6.2",
+    "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
