--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
     "jwt-simple": "^0.5.6",
     "nestjs-zod": "^3.0.0",
     "passport": "^0.6.0",
@@ -41,6 +42,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
