--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,19 @@
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "next": "14.0.2",
+    "polished": "^4.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
